--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,8 @@
 body { font-size: 20px; }
-:root { --accent-color:#AF5E3E; }
+:root { --theme-clr:#AF5E3E; }
 .container { max-width: 1320px; width: 100%; margin: 0px auto; }
+/* button css start */
+.cta { display: block; background-color: #101010; border-radius: 50px; padding:10px 25px; color: #fff; position: relative; overflow: hidden; z-index: 9999; }
+.cta::before { content: ''; z-index: -1; top: var(--y); left: var(--x); display: block; height: 0px; width: 0px; border-radius: 50%; background-color: var(--theme-clr); transition: .25s linear; position: absolute; transform: translate(-50%,-50%); }
+.cta:hover::before { height: 150px; width: 150px; }
+/* button css end */
