--- a/css/global.css
+++ b/css/global.css
@@ -1,6 +1,43 @@
-body { font-size: 20px; }
+body { font-size: 20px; font-weight: 400; }
 :root { --theme-clr:#AF5E3E; }
+
+
 .container { max-width: 1320px; width: 100%; margin: 0px auto; }
+
+
+
+
+
+/* COMMON TITLE CSS START */
+
+p{font-family: 'Inter 28pt';}
+h1,h2,h3,h4,h5,h6{text-transform: uppercase; font-family: 'Barlow Semi Condensed';}
+h1{font-size: 70px; font-weight: 500;}
+h2{font-weight: 500; font-size: 42px; color: #000;}
+h3{font-size: 24px; font-weight: 500;}
+a{font-size: 18px; color: #AF5E3E; font-weight: 600; font-family: 'Inter 28pt';}
+
+
+/* COMMON TITLE CSS END */
+
+
+
+
+
+/* COMMON CLASS STYLE START */
+
+
+.section__title{padding: 10px 0px; border-bottom: 1px solid #000;}
+
+
+/* COMMON CLASS STYLE END */
+
+
+
+
+
+
+
 /* button css start */
 .cta { display: block; background-color: #101010; border-radius: 50px; padding:10px 25px; color: #fff; position: relative; overflow: hidden; z-index: 9999; }
 .cta::before { content: ''; z-index: -1; top: var(--y); left: var(--x); display: block; height: 0px; width: 0px; border-radius: 50%; background-color: var(--theme-clr); transition: .25s linear; position: absolute; transform: translate(-50%,-50%); }
