--- a/css/app.css
+++ b/css/app.css
@@ -1,2 +1,3 @@
-@import url(./reset.css); @import url(./style.css); @import url(./global.css); 
-@import url(./fonts.css);
+ 
+@import url(./fa.css); @import url(./bootstrap.min.css); 
+@import url(./fonts.css); @import url(./global.css);  @import url(./style.css); @import url(./responsive.css);
