--- a/css/global.css
+++ b/css/global.css
@@ -3,8 +3,9 @@ body { font-size: 20px; font-weight: 400; }
 * { margin: 0; padding: 0; box-sizing: border-box; }
 ul { list-style: none; padding: 0; margin: 0; }
 a { text-decoration: none; color: inherit; }
-input,input:hover, textarea,textarea:hover, button,button:hover { outline: none; border: none; box-shadow: none; }
+input,input:hover, textarea,textarea:hover, button,button:hover { background: transparent; outline: none; border: none; box-shadow: none; }
 a:visited { color: transparent; }
+input::placeholder { color: #fff; font-size: 18px; }
 h1,h2,h3,h4,h5,h6,p { margin: 0px; padding: 0px; }
 /* RESET CSS END */
 :root { --theme-clr:#AF5E3E; }
@@ -33,6 +34,7 @@ a:not(.header_nav_links, .cta ) { color: #AF5E3E; }
 .margin-bottom:not(.no-margin-bottom) { margin-bottom: 50px; }
 .margin-left:not(.no-margin-left) { margin-left: 50px; }
 .d-block-custom { display: block; }
+.black { background-color: #000; }
 /* COMMON CLASS STYLE END */
 /* button css start */
 .cta { display: flex; justify-content: center; align-items: center; gap: 15px; background-color: var(--theme-clr); border-radius: 50px; padding:10px 25px; color: #fff; position: relative; overflow: hidden; z-index: 9999; }
