--- a/css/app.css
+++ b/css/app.css
@@ -1,1 +1,1 @@
-@import url(./owl.carousel.min.css); @import url(./fa.css); @import url(./bootstrap.min.css); @import url(./fonts.css); @import url(./global.css); @import url(./style.css); @import url(./responsive.css); 
+@import url(./owl.carousel.min.css); @import url(./fa.css); @import url(./bootstrap.min.css); @import url(./fonts.css); @import url(./global.css); @import url(./style.css); @import url(./responsive.css);  @import url(./locomotive.css);
