--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ ul.menu li { padding: 10px 0px; }
 .section__right__content { display: flex; width: 100%; }
 .section__cta__holder { margin-top:40px ; }
 .section__cta .section__icon img { transition: .25s ease all; transform-origin: center; }
-.section__cta:hover .section__icon img { transform: rotate(-45deg); }
+.section__cta:hover .section__icon img { transform: rotate(-45deg); filter: brightness(100); }
 .about__exp_block { background: var(--theme-clr); color: #fff; width: 100%; margin-bottom: 30px; padding: 30px; display: flex; flex-direction: column; justify-content: space-between; row-gap: 86px; }
 .about__exp_block h3 { font-size: 80px; }
 .about__exp_block.black { background: #000; margin-top: 30px; margin-bottom: 0; }
