--- a/css/global.css
+++ b/css/global.css
@@ -11,18 +11,17 @@ h1,h2,h3,h4,h5,h6,p { margin: 0px; padding: 0px; }
 :root { --theme-clr:#AF5E3E; }
 .container { max-width: 1320px; width: 100%; margin: 0px auto; }
 /* COMMON TITLE CSS START */
-p { font-family: 'Inter 28pt'; }
+p { font-family: 'Inter 28pt'; font-weight: 400; }
 h1,h2,h3,h4,h5,h6 { text-transform: uppercase; font-family: 'Barlow Semi Condensed'; }
 h1 { font-size: 70px; font-weight: 500; }
 h2 { font-weight:  500; font-size: 42px; color: #000; }
 h3 { font-size: 24px; font-weight: 500; }
 a { font-size: 18px; font-weight: 600; font-family: 'Inter 28pt'; text-decoration: none; }
 img { width: 100%; height: 100%; }
-a:not(.eader_nav_links, .cta ) { color: #AF5E3E; }
+a:not(.header_nav_links, .cta ) { color: #AF5E3E; }
 /* COMMON TITLE CSS END */
 /* COMMON CLASS STYLE START */
-
-.section__title { padding: 10px 0px; border-bottom: 1px solid #000; }
+.section__title { padding: 20px 0px; border-bottom: 1px solid #000; }
 .theme__clr__bg { background-color: #AF5E3E; }
 .theme__clr { color: #AF5E3E; }
 .theme__fff { background-color: #fff; }
@@ -36,11 +35,12 @@ a:not(.eader_nav_links, .cta ) { color: #AF5E3E; }
 .margin-left:not(.no-margin-left) { margin-left: 50px; }
 .d-block-custom { display: block; }
 .black { background-color: #000; }
-.no_visible{display: none;}
+.no_visible { display: none; }
+.theme_active { background-color: #AF5E3E !important; }
 /* COMMON CLASS STYLE END */
 /* button css start */
 .cta { display: flex; justify-content: center; align-items: center; gap: 15px; background-color: var(--theme-clr); border-radius: 50px; padding:10px 25px; color: #fff; position: relative; overflow: hidden; z-index: 9999; }
-.cta__banner { background-color: #fff; color: #AF5E3E; max-width: 251px; width: 100%; padding: 12px 30px; }
+.cta__banner { background-color: #fff; color: #AF5E3E; max-width: 254px; width: 100%; padding: 12px 30px; }
 .cta::before { content: ''; z-index: -1; top: var(--y); left: var(--x); display: block; height: 0px; width: 0px; border-radius: 50%; background-color: #000; transition: .25s linear; position: absolute; transform: translate(-50%,-50%); }
 .cta:hover::before { height: 150px; width: 150px; }
 /* button css end */
