--- a/css/style.css
+++ b/css/style.css
@@ -6,37 +6,44 @@
 .header_navigations_links ul { display: flex; align-items: center; gap: 30px; }
 .header .menu-toggle,.off-canvas-menu { display: none; }
 ul.menu li { padding: 10px 0px; }
-/* .off-canvas-menu{padding: 40px;} */
-.off-canvas-menu ul { margin: 0; padding: 0; list-style: none; flex-grow: 1;  text-align: center;}
-.off-canvas-menu ul li {transform: translateX(20%);visibility: hidden;opacity: 0; transition: .5s linear all; transition-delay: 10ms;}
-.off-canvas-menu.active ul li {transform: translateX(00%);visibility:visible;opacity: 1;}
+/* .off-canvas-menu { padding: 40px; }
+*/
+.off-canvas-menu ul { margin: 0; padding: 0; list-style: none; flex-grow: 1; text-align: center; }
+.off-canvas-menu ul li { transform: translateX(20%); visibility: hidden; opacity: 0; transition: .5s linear all; transition-delay: 10ms; }
+.off-canvas-menu.active ul li { transform: translateX(00%); visibility:visible; opacity: 1; }
 .off-canvas-menu ul li:not(.off-canvas-menu ul li:last-child) { padding: 15px; }
 .off-canvas-menu .cta_main { padding: 15px; background-color: #444; }
 .off-canvas-menu .cta { color: white; text-decoration: none; font-weight: bold; }
 .off-canvas-menu.active { transform: translateX(0); }
 .menu-close { background: none; border: none; font-size: 2em; color: white; cursor: pointer; }
-.header a { color: #fff; height: 100%; display: block; }
+.header a { color: #fff; height: 100%; display: block; font-weight: 400; }
+.header a.cta { font-weight: 600; }
+.cta span img { margin-left: 15px; }
 /* Header css end */
 /* banner css start */
 .hero_inner { height: 100vh; width: 100%; overflow: hidden; position: relative; }
 .hero_inner .banner_content { position: absolute; top: 0; z-index: 999; height: 100%; width: 100%; }
-.hero_inner .banner_content .content_inner { position: relative; color: #fff; top: 30%; max-width: 708px; width: 100%; left: 16%; }
+.hero_inner .banner_content .content_inner { position: relative; color: #fff; top: 30%; }
+.hero_inner .banner_content .content_inner h1 { max-width: 710px; }
 .banner_overlay::before { content: ''; position: absolute; height: 100%; width: 100%; background: linear-gradient(90deg, #000, transparent); display: block; }
-.banner_overlay {height: 1000px; }
-.content_inner p { margin-top: 30px; margin-bottom: 50px; max-width: 447px; width: 100%; }
+.banner_overlay { height: 1000px; }
+.content_inner p { margin-top: 30px; margin-bottom: 50px; max-width: 440px; width: 100%; }
 /* banner css end */
 /* service card css start */
 #service-cards-section { margin-top: -77px; position: relative; z-index: 999; }
 .service_card_inner .service_cards_row { display: flex; }
 .service_card { max-width: 380px; width: 100%; margin-right: 30px; }
 .service_card .service_card_link { padding: 25px; background-color: #fff; display: flex; justify-content: space-between; flex-wrap: wrap; }
+#service-cards-section .service_card .service_card_link { color: #000; font-weight: 500; }
+#service-cards-section .service_card .service_card_top:hover .service_card_link { color: #fff; }
+#service-cards-section .section__icon .theme_icon { max-width: 30px; }
 /* service card css end */
 /* About seciton start */
-.section__content__inner { justify-content: space-between; padding: 50px 0px; }
+.section__content__inner { justify-content: space-between; padding: 50px 0px 0px; }
 .section__right__content { display: flex; width: 100%; }
 .section__cta__holder { margin-top:40px ; }
 .section__cta .section__icon img { transition: .25s ease all; transform-origin: center; }
-.section__cta:hover .section__icon img { transform: rotate(-45deg); filter: brightness(100); }
+.section__cta:hover .section__icon img:not(.not_hover) { transform: rotate(-45deg); filter: brightness(100); }
 .about__exp_block { background: var(--theme-clr); color: #fff; width: 100%; margin-bottom: 30px; padding: 30px; display: flex; flex-direction: column; justify-content: space-between; row-gap: 86px; }
 .about__exp_block h3 { font-size: 80px; }
 .about__exp_block.black { background: #000; margin-top: 30px; margin-bottom: 0; }
@@ -44,18 +51,33 @@ ul.menu li { padding: 10px 0px; }
 /* About seciton end */
 /* product slider section css start */
 #our-product { position: relative; }
-.our_products_title { margin: 0px 0px 80px; border-bottom: 1px solid #fff; padding-left: 0px; }
-.our_products_title h2 { padding-bottom: 20px; color: #fff; }
-.slider_section_bg::before { content: ""; position: absolute; background-color: #000; height: 600px; width: 100%; z-index: -1; }
+.our_products_title { margin: 0px 0px 80px; padding-left: 0px; }
+.our_products_title h2 { padding-bottom: 20px; color: #fff; border-bottom: 1px solid #fff; }
+.slider_section_bg::before { content: ""; position: absolute; background-color: #000; height: 543px; width: 100%; z-index: -1; }
 .our-products-section { padding-left:312px ; padding-top:100px ; }
 .slider__p__content { margin-top: 15px; border-top: 1px solid #000; padding-top: 20px; padding-right: 40px; /* padding-bottom: 13px; */ }
-.our-products-section .service_card { max-width: 420px; }
-.our-products-section .service_card .service_card_link .section__icon { margin-right: 10px; }
-.our-products-section .service_card .service_card_link { padding: 40px; padding-right: 0px; padding-bottom: 53px; height: 348px; }
+.our-products-section .service_card { max-width: 100%; margin-right: 0px; }
+.our-products-section .service_card .service_card_link .section__icon { margin-right: 10px; max-width: 40px; }
+.our-products-section .service_card .service_card_link { padding: 40px; padding-right: 0px; padding-bottom: 81px; }
+.section__col__inner .section__cta__holder a span { margin-left: 15px; }
+.section__col__inner .section__cta__holder .section__cta:hover .section__icon img { filter: inherit; }
+.our-products-section .service_card .service_card_link .service_card_top_inner { display: flex; width: 100%; justify-content: space-between; align-items: center; font-weight: 600; }
 .our-products-section .service_card p { color: #000; opacity: .8; }
 .service_card_link.section__cta:hover { background: var(--theme-clr); color: #fff; }
 .service_card_link.section__cta:hover p { color: #fff; opacity: 1; }
 .service_card_link.section__cta:hover .slider__p__content { border-top-color: #fff; }
+#review .service_card .service_card_link { background-color: #000; }
+#review .service_card { max-width: 532px; width: 100%; }
+#review .service_card .slider__p__content p , #review .service_card .review_detail p { color: #fff; }
+#review .service_card .slider__p__content.client_say { padding-left: 40px; margin: 0px; }
+#review .service_card .slider__p__content { margin: 40px 0px; padding: 0px; color: #fff; }
+#review .service_card .slider__p__content.item_one { border: none; }
+#review .service_card .review_detail .review_name { font-size: 20px; font-weight: 600; }
+#review .service_card .review_detail .review_designation { font-size: 16px; font-weight: 400; }
+#review .our-products-section .service_card .service_card_link { padding-left: 0px; padding-bottom: 38px; }
+#review .our-products-section .service_card .service_card_link.theme_active { padding-bottom: 176px; }
+.client_say p { font-size: 26px; max-width: 325px; width: 100%; }
+#review.slider_section_bg::before { height: 624px; }
 /* product slider section css end */
 /* application css start */
 #application .application__links { padding: 50px 0; max-width: 100%; display: flex; align-items: center; justify-content: space-between; border-bottom: 1px solid #00000050; color: #000; }
@@ -65,8 +87,11 @@ ul.menu li { padding: 10px 0px; }
 .git_inner { position: relative; }
 .git_inner h2 { color: #fff; }
 .git_inner p { margin: 30px 0px 50px; }
-.git_content_main { position: absolute; top: 0; height: 100%; width: 100%; color: #fff; }
-.git_content_main .git_content { max-width: 435px; width: 100%; position: relative; top: 25%; left: 100px; }
+.git_content_main { height: 100%; width: 100%; color: #fff; padding: 50px 0 0; }
+.git_content_main .git_content { max-width: 435px; width: 100%; margin: 0 auto; position: relative; }
+.git_content_main .row { align-items: center; justify-content: space-around; }
+.git_content_main .sustainability_img { width: 100%; text-align: center; }
+.git_content_main .sustainability_img img { max-width: 350px; }
 /* footer css start */
 .footer-email-section { background-color: var(--theme-clr); }
 .footer-email-section .email_section_inner { display: flex; align-items: center; justify-content: space-between; padding: 40px 0px; }
@@ -74,7 +99,7 @@ ul.menu li { padding: 10px 0px; }
 .footer-email-section .email_input_area { border-radius: 50px; border: 1px solid #fff; display: inline-flex; justify-content: space-between; align-items: center; height: fit-content; padding: 12px 30px; max-width: 532px; width: 100%; }
 #footer .footer-main { padding: 60px 0px; }
 #footer .footer-main .footer_inner { display: flex; align-items: flex-start; justify-content: space-between; }
-#footer .footer-main .footer_inner .footer__center{ flex: 1; margin-left: 100px; }
+#footer .footer-main .footer_inner .footer__center { flex: 1; margin-left: 100px; }
 #footer .footer-main .footer__left a img { max-width: 147px; width: 100%; }
 #footer .footer-main .footer__right .contact_details { display: flex; flex-direction: column; gap: 30px; max-width: 341px; width: 100%; }
 #footer .footer-main .footer__right .contact_details a { color: #fff; }
